cmake_minimum_required(VERSION 3.9)
project(Solitario)

set(CMAKE_CXX_STANDARD 11)

add_executable(Solitario
        src/Controllers/Command/CommandBroker.cpp
        src/Controllers/Command/CommandBroker.h
        src/Controllers/Command/CommandMenu.cpp
        src/Controllers/Command/CommandMenu.h
        src/Controllers/Menu/CommandController.cpp
        src/Controllers/Menu/CommandController.h
        src/Controllers/Menu/ExitController.cpp
        src/Controllers/Menu/ExitController.h
        src/Controllers/Menu/FlipController.cpp
        src/Controllers/Menu/FlipController.h
        src/Controllers/Menu/MenuController.cpp
        src/Controllers/Menu/MenuController.h
        src/Controllers/Menu/MenuControllerVisitor.h
        src/Controllers/Menu/MoveController.cpp
        src/Controllers/Menu/MoveController.h
        src/Controllers/Menu/RedoController.cpp
        src/Controllers/Menu/RedoController.h
        src/Controllers/Menu/UndoController.cpp
        src/Controllers/Menu/UndoController.h
        src/Controllers/CelebrateController.cpp
        src/Controllers/CelebrateController.h
        src/Controllers/Controller.cpp
        src/Controllers/Controller.h
        src/Controllers/EndController.cpp
        src/Controllers/EndController.h
        src/Controllers/GameController.cpp
        src/Controllers/GameController.h
        src/Controllers/Logic.cpp
        src/Controllers/Logic.h
        src/Controllers/OperationController.cpp
        src/Controllers/OperationController.h
        src/Controllers/OperationControllerVisitor.h
        src/Controllers/StartController.cpp
        src/Controllers/StartController.h
        src/Models/Game.cpp
        src/Models/Game.h
        src/Models/Stack.cpp
        src/Models/Stack.h
        src/Models/States.h
        src/Models/Suits.h
        src/Utils/BooleanDialog.cpp
        src/Utils/BooleanDialog.h
        src/Utils/IO.cpp
        src/Utils/IO.h
        src/Views/Console/Command/FlipView.cpp
        src/Views/Console/Command/FlipView.h
        src/Views/Console/Command/MoveView.cpp
        src/Views/Console/Command/MoveView.h
        src/Views/Console/Command/RedoView.cpp
        src/Views/Console/Command/RedoView.h
        src/Views/Console/Command/UndoView.cpp
        src/Views/Console/Command/UndoView.h
        src/Views/Console/Utils/LimitedIntDialogView.cpp
        src/Views/Console/Utils/LimitedIntDialogView.h
        src/Views/Console/CelebrateView.cpp
        src/Views/Console/CelebrateView.h
        src/Views/Console/ConsoleView.cpp
        src/Views/Console/ConsoleView.h
        src/Views/Console/EndView.cpp
        src/Views/Console/EndView.h
        src/Views/Console/GameView.cpp
        src/Views/Console/GameView.h
        src/Views/Console/MenuView.cpp
        src/Views/Console/MenuView.h
        src/Views/Console/StartView.cpp
        src/Views/Console/StartView.h
        src/Views/View.h
        src/Klondike.cpp
        src/Klondike.h
        src/main.cpp src/Models/Board.cpp src/Models/Board.h src/Models/Card.cpp src/Models/Card.h src/Models/Deck.cpp src/Models/Deck.h src/Models/Foundation.cpp src/Models/Foundation.h src/Models/Pile.cpp src/Models/Pile.h src/Models/Queue.cpp src/Models/Queue.h src/Models/Waste.cpp src/Models/Waste.h src/Views/Console/Models/BoardView.cpp
        src/Views/Console/Models/BoardView.h
        src/Views/Console/Models/StackView.h
        src/Views/Console/Models/StackView.cpp
        src/Views/Console/Models/SuitView.h
        src/Views/Console/Models/SuitView.cpp
        )
